// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enroll Authenticator Selector Transformer Tests should show grace period required soon link when link is customized 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "dataSe": "gracePeriodRequiredSoonCustomLink",
          "href": "https://windico.com/support",
          "label": "Custom learn more link",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "label": "oie.setup.remind.me.later",
        "options": Object {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when all elements have active grace periods 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "label": "oie.setup.remind.me.later",
        "options": Object {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when all elements have active grace periods 2`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "label": "oie.setup.remind.me.later",
        "options": Object {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when all elements have inactive grace periods 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when all elements have inactive grace periods 2`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when all elements have mixed skip count and expiry date grace periods 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "label": "oie.setup.remind.me.later",
        "options": Object {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when mix of active and inactive grace periods 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when mix of active and inactive grace periods 2`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when mix of required now and required soon with skip count and expiry date grace periods 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when step is not skippable 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when step is skippable 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.optional.short",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "label": "oie.optional.authenticator.button.title",
        "options": Object {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when step is skippable and brandName is provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle.custom",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.optional.short",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      Object {
        "label": "oie.optional.authenticator.button.title",
        "options": Object {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elemtns when no elements have grace periods 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should treat authenticator elements as due now when badly formatted values 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should treat authenticator elements as due now when badly formatted values 2`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      Object {
        "options": Object {
          "buttons": Array [
            Object {
              "label": "Email",
              "options": Object {
                "actionParams": Object {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
